# sobec

./: .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakeLists.txt~  README.md  package.xml
benchmark/: CMakeLists.txt  bench-mpc-walk.cpp  mpc-walk-automaticallygeneratedinit.hpp  mpc_description.py  mpc_params.py
benchmark/automaticallygeneratedinit/: mpc-walk-default.hpp
examples/walk_without_think/: compute_init_config_virgile.py  demo_pushreco.py  jump_virgile.py  mpcparams.py  params.py  specific_params.py  stand_bullet.py  walk_bullet.py  walk_for_wan.py  walk_mpc.py  walk_ocp.py  walk_virgile.py
include/example-adder/: croco.hpp  croco.hxx  pin.hpp  python.hpp
include/sobec/: activation-quad-ref.hpp  com-velocity.hpp  com-velocity.hxx  contact-force.hpp  contact-force.hxx  contact-fwddyn.hpp  contact-fwddyn.hxx  contact1d.hpp  contact1d.hxx  contact3d.hpp  contact3d.hxx  croco.hpp  croco.hxx  designer.hpp  flexibility_compensation.hpp  foot_trajectory.hpp  fwd.hpp  gepadd.hpp  horizon_manager.hpp  lpf.hpp  lpf.hxx  model_factory.hpp  mpc-walk.hpp  mpc-walk.hxx  multiple-contacts.hpp  multiple-contacts.hxx  ocp-walk.hpp  ocp.hpp  pin.hpp  py2cpp.hpp  python.hpp  quadratic-ref.hpp  residual-center-of-friction.hxx  residual-com-velocity.hpp  residual-com-velocity.hxx  residual-cop.hpp  residual-cop.hxx  residual-feet-collision.hpp  residual-feet-collision.hxx  residual-fly-high.hpp  (+8 more)
mpc/: assert_ocp_walk_feet_traj.npy  bullet_mpc.py  demo_pushreco.py  miscdisp.py  mpc.py  mpcparams.py  ocp_walk_feet_traj.py  params.py  pinbullet.py  robot_wrapper.py  save_traj.py  stand_bullet.py  talos_low.py  test_mpc_walk_against_python.py  viewer_multiple.py  walk.py  walk_bullet.py  walk_mpc.py  walk_ocp.py  walk_plotter.py  weight_share.py
mpc/refs/: mpc.py.ascii
mpc/utils/: miscdisp.py  talos_low.py  viewer_multiple.py  walk_plotter.py
python/: CMakeLists.txt  activation-quad-ref.cpp  com-velocity.cpp  contact-force.cpp  contact-fwddyn.cpp  contact1d.cpp  contact3d.cpp  croco.cpp  designer.cpp  flexibility_compensation.cpp  gepadd.cpp  horizon_manager.cpp  lpf.cpp  main.cpp  model_factory.cpp  mpc-walk.cpp  multiple-contacts.cpp  ocp-walk.cpp  ocp.cpp  pin.cpp  quadratic-ref.cpp  residual-center-of-friction.cpp  residual-com-velocity.cpp  residual-cop.cpp  residual-feet-collision.cpp  residual-fly-high.cpp  residual-vel-collision.cpp  statelpf.cpp  std-containers.cpp  vel-collision.cpp  wbc.cpp
python/crocomplements/: activation-quad-ref.cpp  residual-2D-surface.cpp  residual-center-of-friction.cpp  residual-com-velocity.cpp  residual-cop.cpp  residual-dcm-position.cpp  residual-feet-collision.cpp  residual-fly-angle.cpp  residual-fly-high.cpp  residual-vel-collision.cpp
python/crocomplements/contact/: contact-force.cpp  contact-fwddyn.cpp  contact1d.cpp  contact3d.cpp  contact6d.cpp  multiple-contacts.cpp
python/crocomplements/lowpassfilter/: action.cpp  state.cpp
python/crocomplements/softcontact/: dam3d-augmented.cpp  dam3d.cpp  iam3d-augmented.cpp  soft-contact3d-augmented-fwddyn.cpp  soft-contact3d-fwddyn.cpp  state-soft-contact.cpp  state.cpp
python/example_adder/: __init__.py
python/hand_table/: model_factory_hand.cpp  wbc_hand.cpp
python/sobec/: __init__.py  logs.py  pinbullet.py  repr_ocp.py  talos_collections.py
python/sobec/walk/: __init__.py  config_mpc.py  miscdisp.py  ocp.py  params.py  robot_wrapper.py  talos_collections.py  weight_share.py  yaml_params.py
python/sobec/walk_without_think/: __init__.py  miscdisp.py  ocp.py  params.py  plotter.py  weight_share.py  yaml_params.py
python/tests/: assert_sobec.py  benchmark_simu.py  bullet_Talos.py  configuration.py  configuration2.py  configurationFree.py  configurationStair.py  configurationWalk.py  cppControlLoop.py  freeStairsMPC.py  freeWalkMPC.py  pyControlLoop.py  pyMPC.py  pyModelMaker.py  pyOCP_horizon.py  pyRobotWrapper.py  reachMPC.py  stairCase.py  stairMPC.py  tableMPC.py  test_classes.py  test_designer.py  test_horizon_manager.py  test_model_maker.py  trajectory_croco1_7.npz  utils.py  walkMPC.py  with_one_horizon.py
python/tests/step/: step.stl  step.urdf
python/walk-with-traj/: designer.cpp  foot_trajectory.cpp  horizon_manager.cpp  model_factory.cpp  model_factory_nothinking.cpp  ocp.cpp  wbc.cpp  wbc_hand.cpp  wbc_horizon.cpp  wbc_nothinking.cpp
python/walk-without-think/: model_factory_nothinking.cpp  mpc.cpp  ocp.cpp  wbc_nothinking.cpp
src/: croco.cpp  designer.cpp  flexibility_compensation.cpp  foot_trajectory.cpp  gepadd.cpp  horizon_manager.cpp  main.cpp  model_factory.cpp  mpc-walk-params.cpp  ocp-ref-forces.cpp  ocp-walk-param.cpp  ocp-walk-params.cpp  ocp-walk-robot.cpp  ocp-walk-running-models.cpp  ocp-walk-terminal.cpp  ocp-walk.cpp  ocp.cpp  pin.cpp  py2cpp.cpp  sobec.cpp  wbc.cpp
src/hand_table/: model_factory_hand.cpp  wbc_hand.cpp
src/walk-with-traj/: designer.cpp  (+9 more)
tests/: CMakeLists.txt  add.cpp  boost_add.cpp  boost_croco.cpp  boost_pin.cpp  common.hpp  config_walk.yaml  costs.cpp  test_actions_soft.cpp  test_contact1d.cpp  test_contact3d.cpp  test_contact6d.cpp  test_costs.cpp  test_diff_actions.cpp  test_diff_actions_soft.cpp  test_init_shooting_problem.cpp  test_lpf.cpp  test_states.cpp  test_stateslpf.cpp  test_statessoft.cpp  test_walk_params.cpp
tests/factory/: action-soft.cpp  action-soft.hpp  activation.cpp  activation.hpp  actuation.cpp  actuation.hpp  contact1d.cpp  contact1d.hpp  contact3d.cpp  contact3d.hpp  contact6d.cpp  contact6d.hpp  cost.cpp  cost.hpp  diff-action-soft.cpp  diff-action-soft.hpp  diff-action.cpp  diff-action.hpp  lpf.cpp  lpf.hpp  pinocchio_model.cpp  pinocchio_model.hpp  random_generator.hpp  state.cpp  state.hpp  statelpf.cpp  statelpf.hpp  statesoft.cpp  statesoft.hpp
tests/python/: CMakeLists.txt  test_add.py  test_cop.py  test_croco.py  test_feet_collision.py  test_fly_high.py  test_mpc_walk.py  test_mpc_walk__complex.py  test_mpccpp.py  test_ocpcpp.py  test_pin.py  test_ref_force.py  test_vel_collision.py  test_walk.py  test_walk_with_traj.py  test_yaml.py  walking_straight.py
(+108 files in other folders)
